# CountPeople

./: .gitignore  LICENSE  README.md
CountPeopleApp.Android/: settings.gradle
CountPeopleApp.Android/app/: build.gradle
CountPeopleApp.Android/app/src/androidTest/java/com/printf/helloworld/countpeopleapp/: ExampleInstrumentedTest.kt
CountPeopleApp.Android/app/src/main/: AndroidManifest.xml
CountPeopleApp.Android/app/src/main/java/com/printf/helloworld/countpeopleapp/: MainActivity.kt
CountPeopleApp.Android/app/src/main/res/layout/: activity_main.xml
CountPeopleApp.Android/app/src/main/res/menu/: toolbar_menu.xml
CountPeopleApp.Android/app/src/main/res/values/: google_maps_api.xml  strings.xml  themes.xml
CountPeopleApp.Android/app/src/main/res/values-night/: themes.xml
CountPeopleApp.Android/app/src/test/java/com/printf/helloworld/countpeopleapp/: ExampleUnitTest.kt
CountPeopleApp.Android/gradle/wrapper/: gradle-wrapper.properties
CountPeopleCamera/: CMakeLists.txt  cp.ini
CountPeopleCamera/CountPeopleCamera/: Detector.cpp  Detector.hpp  Sender.cpp  Sender.hpp  iniparser.hpp  main.cpp
CountPeopleServer/: data.db  package-lock.json  package.json  server.js
